--- a/Atividade_13_Ronilson_da_Cruz_Nascimento_Machine_Learning_II.ipynb
+++ b/Atividade_13_Ronilson_da_Cruz_Nascimento_Machine_Learning_II.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "QPAE6oICeuOK"
       ],
-      "authorship_tag": "ABX9TyOtcUQR9d6XWQ1Qr8Gw+6tx",
+      "authorship_tag": "ABX9TyO+hdWv+3EuQ4sY2MQVYDO9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,6 +41,10 @@
         "**Especialização em Análise de Dados e Inteligência Artificial**\n",
         "\n",
         "**Disciplina de Machine Learning II**\n",
+        "\n",
+        "**Professor: Dr. Paulo Rogério de Almeida Ribeiro**\n",
+        "\n",
+        "**Professor Tutor: Mestrando John Hobby Alves de Aguiar**\n",
         "\n",
         "**Aluno: Ronilson da Cruz Nascimento**\n",
         "\n",
