--- a/Atividade_13_Ronilson_da_Cruz_Nascimento_Machine_Learning_II.ipynb
+++ b/Atividade_13_Ronilson_da_Cruz_Nascimento_Machine_Learning_II.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "QPAE6oICeuOK"
       ],
-      "authorship_tag": "ABX9TyOL9hmlrUph3IMntNaf3K5f",
+      "authorship_tag": "ABX9TyOFmEmxYnu2BsTP0/Bt1QL8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,9 @@
         "**Atividade 13**:  <br>\n",
         "*Trabalho de conclusão da disciplina de Machine Learning II, compondo atividade 13, da implementação de um código computacional na linguagem Python de Aprendizagem Não-Supervisionada, do curso de especialização em Análise de Dados e Inteligência Artificial.*\n",
         "\n",
-        "![CLUSTERING](https://blog.bismart.com/hubfs/Imported_Blog_Media/Clustering&clasification-Animales-Sep-26-2023-09-13-22-7262-AM.gif)"
+        "![CLUSTERING](https://blog.bismart.com/hubfs/Imported_Blog_Media/Clustering&clasification-Animales-Sep-26-2023-09-13-22-7262-AM.gif)\n",
+        "\n",
+        "![K-MEANS](https://miro.medium.com/v2/resize:fit:832/1*AzX-3FPncrZaIfWbI5EwCw.gif)"
       ],
       "metadata": {
         "id": "lS-npbJsXvS1"
