--- a/Atividade_13_Ronilson_da_Cruz_Nascimento_Machine_Learning_II.ipynb
+++ b/Atividade_13_Ronilson_da_Cruz_Nascimento_Machine_Learning_II.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "QPAE6oICeuOK"
       ],
-      "authorship_tag": "ABX9TyOFmEmxYnu2BsTP0/Bt1QL8",
+      "authorship_tag": "ABX9TyMIm0p+JgXvUYDI6xwpyHZO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,15 +44,59 @@
         "\n",
         "\n",
         "**Atividade 13**:  <br>\n",
-        "*Trabalho de conclusão da disciplina de Machine Learning II, compondo atividade 13, da implementação de um código computacional na linguagem Python de Aprendizagem Não-Supervisionada, do curso de especialização em Análise de Dados e Inteligência Artificial.*\n",
+        "*Trabalho de conclusão da disciplina de Machine Learning II, compondo atividade 13, da implementação de um código computacional na linguagem Python de Aprendizagem Não-Supervisionada, do curso de especialização em Análise de Dados e Inteligência Artificial.*  <br><br>\n",
         "\n",
-        "![CLUSTERING](https://blog.bismart.com/hubfs/Imported_Blog_Media/Clustering&clasification-Animales-Sep-26-2023-09-13-22-7262-AM.gif)\n",
+        "Algoritmo solução de problemas por Agrupamento (Clustering) - K-MEANS:  <br>\n",
+        "<div align=\"center\"> <img src=\"https://blog.bismart.com/hubfs/Imported_Blog_Media/Clustering&clasification-Animales-Sep-26-2023-09-13-22-7262-AM.gif\" width=\"600\"> </div>\n",
         "\n",
-        "![K-MEANS](https://miro.medium.com/v2/resize:fit:832/1*AzX-3FPncrZaIfWbI5EwCw.gif)"
+        "\n",
+        "<div align=\"center\"> <img src=\"https://miro.medium.com/v2/resize:fit:832/1*AzX-3FPncrZaIfWbI5EwCw.gif\" width=\"600\"> </div>\n",
+        "\n",
+        "\n",
+        "<div align=\"center\"> <img src=\"https://media.licdn.com/dms/image/v2/C5612AQH8kEizAouznA/article-cover_image-shrink_600_2000/article-cover_image-shrink_600_2000/0/1626424726069?e=2147483647&v=beta&t=AbJCMWLwSdrtfetYla9IIqu2H7OvaEzCUi4MW1UsVNk\" width=\"600\"> </div>\n",
+        "\n",
+        "Método Principal Component Analysis (PCA):  <br>\n",
+        "<div align=\"center\"> <img src=\"https://miro.medium.com/v2/resize:fit:1400/format:webp/1*eAAhbT9TF9R50HM5YkW1CA.gif\" width=\"900\"> </div>"
       ],
       "metadata": {
         "id": "lS-npbJsXvS1"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "qFrFIQFcKmIW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2MQYQlT3KiCj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "LR_n7XV7KcHd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "S4O3sBo0KWQk"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
