--- a/Atividade_13_Ronilson_da_Cruz_Nascimento_Machine_Learning_II.ipynb
+++ b/Atividade_13_Ronilson_da_Cruz_Nascimento_Machine_Learning_II.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "QPAE6oICeuOK"
       ],
-      "authorship_tag": "ABX9TyMIm0p+JgXvUYDI6xwpyHZO",
+      "authorship_tag": "ABX9TyNieMxgh+pTLLOn0OnF6wru",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,45 +63,9 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "qFrFIQFcKmIW"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "2MQYQlT3KiCj"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "LR_n7XV7KcHd"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "S4O3sBo0KWQk"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "**ATIVIDADE 13 - DISCIPLINA DE MACHINE LENARNING II**\n",
+        "**ATIVIDADE 13 - DISCIPLINA DE MACHINE LENARNING II:**\n",
         "\n",
         "**SEGMENTAÇÃO DE CLIENTES COM APRENDIZADO NÃO SUPERVISIONADO: UMA ABORDAGEM UTILIZANDO O WHOLESALE CUSTOMERS DATASET.**"
       ],
