--- a/Atividade_13_Ronilson_da_Cruz_Nascimento_Machine_Learning_II.ipynb
+++ b/Atividade_13_Ronilson_da_Cruz_Nascimento_Machine_Learning_II.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "QPAE6oICeuOK"
       ],
-      "authorship_tag": "ABX9TyNieMxgh+pTLLOn0OnF6wru",
+      "authorship_tag": "ABX9TyN4bq0R29pXhx7ZBqco6Ee1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,15 +48,21 @@
         "\n",
         "Algoritmo solução de problemas por Agrupamento (Clustering) - K-MEANS:  <br>\n",
         "<div align=\"center\"> <img src=\"https://blog.bismart.com/hubfs/Imported_Blog_Media/Clustering&clasification-Animales-Sep-26-2023-09-13-22-7262-AM.gif\" width=\"600\"> </div>\n",
+        "Fonte: [https://www.kaggle.com/code/eriveltonguedes/7-clusteriza-o-k-means-erivelton].  <br>\n",
         "\n",
+        "  <br>\n",
         "\n",
         "<div align=\"center\"> <img src=\"https://miro.medium.com/v2/resize:fit:832/1*AzX-3FPncrZaIfWbI5EwCw.gif\" width=\"600\"> </div>\n",
+        "Fonte: [https://datasans.medium.com/k-means-cluster-okay-you-built-the-model-then-what-no-math-a0e710b42252].  <br>\n",
         "\n",
         "\n",
         "<div align=\"center\"> <img src=\"https://media.licdn.com/dms/image/v2/C5612AQH8kEizAouznA/article-cover_image-shrink_600_2000/article-cover_image-shrink_600_2000/0/1626424726069?e=2147483647&v=beta&t=AbJCMWLwSdrtfetYla9IIqu2H7OvaEzCUi4MW1UsVNk\" width=\"600\"> </div>\n",
+        "Fonte: [https://www.linkedin.com/pulse/k-means-clustering-its-real-use-case-surayya-shaikh].  <br>\n",
+        "\n",
         "\n",
         "Método Principal Component Analysis (PCA):  <br>\n",
-        "<div align=\"center\"> <img src=\"https://miro.medium.com/v2/resize:fit:1400/format:webp/1*eAAhbT9TF9R50HM5YkW1CA.gif\" width=\"900\"> </div>"
+        "<div align=\"center\"> <img src=\"https://miro.medium.com/v2/resize:fit:1400/format:webp/1*eAAhbT9TF9R50HM5YkW1CA.gif\" width=\"900\"> </div>\n",
+        "Fonte: [https://medium.com/@cantarutti_math/o-que-o-pca-faz-uma-breve-introdu%C3%A7%C3%A3o-4b6544fed3b7].  <br>\n"
       ],
       "metadata": {
         "id": "lS-npbJsXvS1"
